--- a/prototype 2/index.html
+++ b/prototype 2/index.html
@@ -52,8 +52,8 @@
                     </div>
                 </div>
             <div class="drumKitLayout">
-                <div class="highHatPlace">
-                    
+                <div class="highHatPlace" id="laPlace">
+
                 </div>
             </div>
         </div>
